@@ -3,7 +3,8 @@
 - TODO: run local webserver
 - feature: specify more than one url for fetching
 - feature: specify tags when fetching a paper
-- feature: export to HTML (markdown is converted to HTML)
+- feature: export to HTML from ui (markdown is converted to HTML)
+- feature: command line argument "export" to export the database into an HTML file
 - markdown (.tmp -> .tmp.md)
 - bugfix: less is confused when showing lines with escape sequences having as many chadc racters as the terminal size
 - feature: split long lines at spaces when shown with less so that words are not split
